Related: fdo#47347 m_aFontEncodings is a map so returns 0 on unknown fontindex

Change-Id: I3addf0d27058ed9ef01d4893ad932c13623c283c